--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <div class="box-container">
 
     <div class="box">
-        <img src="img1.jpeg" alt="">
+        <img src="img1.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
