--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div class="content">
 
-    <h1>SAVE EARTH SAVE PLANET SAVE LIFE.</h1>
+    <h1>Our climate is changing; why aren't we?</h1>
     <p>Saving the environment ensures a sustainable future. Reduce waste, conserve resources, protect wildlife, and combat climate change through simple actions like using renewable energy, planting trees, and minimizing plastic use.</p>
     <a href="#"><button class="btn">explore.</button></a>
 
@@ -180,7 +180,7 @@
     </div>
 
     <div class="box">
-        <img src="img.jpg" alt="">
+        <img src="img2.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
@@ -189,7 +189,7 @@
     </div>
 
     <div class="box">
-        <img src="img.jpg" alt="">
+        <img src="img10.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
@@ -198,7 +198,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img4.jpg" alt="">
+        <img src="img4.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
@@ -207,7 +207,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img5.jpg" alt="">
+        <img src="img5.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
@@ -216,7 +216,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img6.jpg" alt="">
+        <img src="img6.jpg" alt="">
         <div class="icons">
             <a style="--i:1;" href="#" class="fas fa-heart"></a>
             <a style="--i:2;" href="#" class="fas fa-share"></a>
@@ -281,7 +281,7 @@
 <div class="box-container">
 
     <div class="box">
-        <img src="images/img1.jpg" alt="">
+        <img src="img14.jpg" alt="">
         <div class="content">
             <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
             <h3>post title goes here</h3>
@@ -291,7 +291,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img3.jpg" alt="">
+        <img src="img10.jpg" alt="">
         <div class="content">
             <span> <i class="fas fa-calendar"></i> jan 3, 2021 </span>
             <h3>post title goes here</h3>
@@ -301,7 +301,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img6.jpg" alt="">
+        <img src="img12.jpg" alt="">
         <div class="content">
             <span> <i class="fas fa-calendar"></i> jan 8, 2021 </span>
             <h3>post title goes here</h3>
@@ -309,6 +309,66 @@
             <a href="#"><button class="btn">read more</button></a>
         </div>
     </div>
+    <div class="box">
+        <img src="img15.jpg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="img16.jpg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+    <div class="box">
+        <img src="img17.jpg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="img22.jpg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+    <div class="box">
+        <img src="img20.jpg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="img21.jpeg" alt="">
+        <div class="content">
+            <span> <i class="fas fa-calendar"></i> jan 2, 2021 </span>
+            <h3>post title goes here</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis nostrum voluptates cumque deserunt incidunt, minus mollitia rem molestiae ad.</p>
+            <a href="#"><button class="btn">read more</button></a>
+        </div>
+    </div>
+
+
+
 
 </div>
 
@@ -323,7 +383,7 @@
 <div class="box-container">
 
     <div class="box">
-        <a href="#" class="logo"><i class="fas fa-seedling"></i>green</a>
+        <a href="#" class="logo"><i class="fas fa-seedling"></i>ONE Planet</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda possimus impedit voluptate fuga id sapiente perspiciatis amet eos esse iure.</p>
     </div>
 
